# aif

./: CONTRIBUTING.md  LICENSE-GENERATED  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
aif/: cli.py
aif/api/: service.py
aif/codegen/: pydantic_gen.py
aif/storage/: local.py
aif/ui/: app.py
tests/: test_infer.py
