[project]
name = "aif"
version = "0.1.0"
description = "AIF: Interface Foundry for contracts, schema inference, and codegen"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "typer>=0.12",
  "httpx>=0.27",
  "streamlit>=1.36",
  "orjson>=3.10",
  "rich>=13.7"
]
# Устанавливай aif-core отдельно (локально или из PyPI)
# пример для локальной разработки: uv pip install -e ../aif-core

[project.scripts]
aif = "aif.cli:app"

[tool.uv]
# при желании: uv sync / uv run
